# TechnikiEfektywnegoProgramowaniaSem3

./: CMakeLists.txt  main.cpp
lista1/zad1/: main.cpp  main.h  zad1.cpp  zad1.h
lista1/zad2-3/: main.cpp  main.h  zad2.cpp
lista1/zad4/: CTable.cpp  CTable.h  main.cpp  zad4.cpp  zad4.h
lista2/: Number.cpp  Number.h  Tester.cpp  Tester.h
lista3/: Interface.cpp  Interface.h  Tester.cpp  Tester.h
lista3/Tree/: Node.cpp  Node.h  Tree.cpp  Tree.h
lista4/: Error.cpp  Error.h  FileSaver.h  Result.cpp  Result.h  Tester.cpp  Tester.h  TreeAdapter.cpp  TreeAdapter.h
lista5/: SellData.cpp  SellData.h  SmartPointer.h  SmartPointerFixed.h  Tester.cpp
